# petgraph-wasm

./: .gitignore  Cargo.toml  README.md  package.json
benchmarks/: toposort.js
benchmarks/datasets/: netscience.json
demo/: index.html  script.js
src/: lib.rs
src/algo/: mod.rs
src/graph_impl/: mod.rs
src/js_helpers/: mod.rs  test.rs
