[package]
name = "petgraph-wasm"
version = "0.0.1"
authors = ["antv"]
edition = "2018"
license = "MIT"
description = "A WASM binding of rust implementation for graph layout algorithms."
repository = "https://github.com/antvis/layout"
documentation = "https://observablehq.com/d/2db6b0cc5e97d8d6"
keywords = ["graph", "layout", "viz"]
categories = ["visualization"]
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
petgraph = "0.6"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"